--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "start": "npm run build-client && node src/api/index.js",
+    "start": "npm run build-client & node src/api/index.js",
     "start-redis": "redis-server --daemonize yes",
-    "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon src/api/index.js",
-    "dev": "npm run dev-client & npm run start-redis && nodemon src/api/index.js",
+    "dev-peer": "cross-env GENERATE_PEER_PORT='true' ENV='development' nodemon src/api/index.js",
+    "dev": "npm run dev-client & npm run start-redis && cross-env ENV='development' nodemon src/api/index.js",
     "build-client": "npm run clean && parcel build src/client/src/index.html --out-dir src/client/dist",
     "dev-client": "npm run clean && parcel src/client/src/index.html --out-dir src/client/dist",
     "clean": "rm -rf .cache src/client/dist"
